<resources>
    <string name="app_name">Modosmart</string>

    <string name="main_title">Modosmart</string>

    <string name="menu_room_sensor">Sensors</string>
    <string name="menu_ac_switch">Switches</string>
    <string name="menu_settings">Settings</string>

    <string name="air_conditioner_title">Air Conditioner</string>
    <string name="ac_symbiote_id">Symbiote ID</string>
    <string name="ac_symbiote_id_default_value">5bd8c13e3a6fd86d66fd3df2</string>
    <string name="ac_mac_address">MAC Address</string>
    <string name="ac_mac_address_default_value">00:00:00:00</string>
    <string name="air_condition_status">Status</string>

    <string name="room_sensor_title">Room Sensor</string>
    <string name="room_mac_address">MAC Address</string>
    <string name="room_symbiote_id">Symbiote ID</string>
    <string name="room_sensor_temperature">Temperature</string>
    <string name="room_sensor_humidity">Humidity</string>
    <string name="room_sensor_presence">Presence</string>
    <string name="room_sensor_battery">Battery</string>
    <string name="room_sensor_firmware">Firmware</string>
    <string name="room_symbiote_id_default_value">5bd8c13e3a6fd86d66fd3df2</string>
    <string name="room_mac_address_default_value">00:00:00:00</string>
    <string name="room_temperature_default_value">19.08</string>
    <string name="room_humidity_default_value">50</string>
    <string name="room_presence_default_value">255</string>
    <string name="room_battery_default_value">100</string>
    <string name="room_firmware_default_value">1.0.0</string>

    <string name="no_records">No Records Available!</string>
</resources>
