<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_sensor_title"
                    android:drawableStart="@drawable/ic_environmental_sensor"
                    android:drawableLeft="@drawable/ic_environmental_sensor"
                    android:drawablePadding="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_mac_address"
                        android:drawableStart="@drawable/baseline_bluetooth_black_24"
                        android:drawableLeft="@drawable/baseline_bluetooth_black_24"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/room_mac_address_value"
                        android:text="@string/room_mac_address_default_value"/>
            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_symbiote_id"
                        android:drawableStart="@drawable/baseline_info_black_24"
                        android:drawableLeft="@drawable/baseline_info_black_24"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/room_symbiote_id_value"
                        android:text="@string/room_symbiote_id_default_value"
                        android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_sensor_temperature"
                        android:drawableStart="@drawable/ic_thermometer"
                        android:drawableLeft="@drawable/ic_thermometer"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/room_temperature_value"
                        android:text="@string/room_temperature_default_value"
                        android:textSize="12sp"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_sensor_humidity"
                        android:drawableStart="@drawable/ic_humidity"
                        android:drawableLeft="@drawable/ic_humidity"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/room_humidity_value"
                        android:text="@string/room_humidity_default_value"
                        android:textSize="12sp"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_sensor_presence"
                        android:drawableStart="@drawable/ic_presence"
                        android:drawableLeft="@drawable/ic_presence"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/room_presence_value"
                        android:text="@string/room_presence_default_value"
                        android:textSize="12sp"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_sensor_battery"
                        android:drawableStart="@drawable/ic_battery"
                        android:drawableLeft="@drawable/ic_battery"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/room_battery_value"
                        android:text="@string/room_battery_default_value"
                        android:textSize="12sp"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_sensor_firmware"
                        android:drawableStart="@drawable/ic_firmware"
                        android:drawableLeft="@drawable/ic_firmware"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/room_firmware_value"
                        android:text="@string/room_firmware_default_value"
                        android:textSize="12sp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>