<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air_conditioner_title"
                    android:drawableStart="@drawable/ic_air_conditioner"
                    android:drawableLeft="@drawable/ic_air_conditioner"
                    android:drawablePadding="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ac_mac_address"
                    android:drawableStart="@drawable/ic_wifi_black_24dp"
                    android:drawableLeft="@drawable/ic_wifi_black_24dp"
                    android:drawablePadding="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ac_mac_address_value"
                    android:text="@string/ac_mac_address_default_value"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ac_symbiote_id"
                    android:drawableStart="@drawable/baseline_info_black_24"
                    android:drawableLeft="@drawable/baseline_info_black_24"
                    android:drawablePadding="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ac_symbiote_id_value"
                    android:text="@string/ac_symbiote_id_default_value"
                    android:textSize="12sp"/>

            </LinearLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">
                <Switch
                        android:id="@+id/ac_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/air_condition_status"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:paddingTop="30dp"
                        android:paddingBottom="20dp"
                        android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>